--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dist": "npm run build && electron-builder"
   },
   "dependencies": {
+    "@types/pdfkit": "^0.17.4",
+    "pdfkit": "^0.17.2",
     "sql.js": "^1.12.0",
     "uuid": "^11.0.5"
   },
