--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:renderer": "vite build",
     "start": "electron .",
     "dist": "npm run build && electron-builder",
-    "release": "npm run build && node scripts/release.js"
+    "release": "npm run build && node scripts/release.js",
+    "db:reset": "node scripts/db-reset.js"
   },
   "dependencies": {
     "@types/pdfkit": "^0.17.4",
